# taskflow

./: .gitignore  ANALYSIS_CHECKLIST.md  ANALYSIS_DOCUMENTATION_INDEX.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CODEBASE_EXPLORATION_SUMMARY.md  COMPREHENSIVE_ANALYSIS.md  IMPLEMENTATION_ANALYSIS_INDEX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_DEEP_DIVE.md  IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  INTERACTION_REVIEW_ANALYSIS.md  PRODUCT_INTERACTION_REVIEW.md  QUICK_REFERENCE.md  TaskFlow_代码实现技巧.md  TaskFlow_数据模型详细分析.md  TaskFlow_架构与实现细节.md  VERIFICATION.md  cloudbaserc.json  mobile-ux-ui-redesign-proposal.md  package-lock.json  分析文档索引.md  前端重构建议_移动端优化.md  深度分析-移动端交互设计.md  移动端UX优化落地方案-v2.md  移动端UX优化落地方案.md
agent-team/: .env.example  .gitignore  README.md  bootstrap-manifest.v1.json  pyproject.toml
agent-team/configs/: README.md
agent-team/docs/: AGENT-TEAM-RUN-GUIDELINES-V2.md  LLM-ADAPTERS.md  MCP-INTEGRATION.md  NEW-PROJECT-AGENT-CARD.md  NEW-PROJECT-AGENT-RUNBOOK.md  NEW-PROJECT-SOP.md  PROJECT-INIT.md  USAGE-GUIDE.md
agent-team/logs/: README.md
agent-team/references/: ux-governance-rules.md  ux-review-sop.md
agent-team/roles/: README.md
agent-team/runtime/: README.md  bootstrap.py  e2e_demo.py  requirements.txt
agent-team/scripts/: init_project.sh  lightweight_eval.sh  run_mcp_server.sh  setup_venv.sh
agent-team/state/: project-state.v1.json
agent-team/tests/: test_adapters.py  test_cli.py  test_project.py  test_server.py
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: lib.rs  (+1 more)
(+577 files in other folders)
