[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-team"
version = "0.1.0"
description = "Multi-role project governance kernel with MCP server adapters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "mcp>=1.0.0",
]

[project.scripts]
agent-team = "agent_team_cli.main:main"
agent-team-mcp = "agent_team_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
