[package]
name = "todo-workspace-desktop"
version = "0.1.0"
description = "Todo Workspace desktop shell"
authors = ["WorkBuddy"]
edition = "2021"

[lib]
name = "todo_workspace_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-store = "2"
